src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 222.2 84% 4.9%;

    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;

    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;

    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;

    --muted: 0, 0%, 73%;
    --muted-foreground: 215.4 16.3% 46.9%;

    --accent: 10, 100%, 60%;
    --accent-foreground: 222.2 47.4% 11.2%;

    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;
    --ring: 222.2 84% 4.9%;

    --radius: 0.5rem;

    /* Custom */
    --foreground-rgb: 0, 0, 0;
    --background-hex: #ffffff;
    --border-hex: #d9d9d9;
  }

  .dark {
    --background: 222.2 84% 4.9%;
    --foreground: 210 40% 98%;

    --card: 222.2 84% 4.9%;
    --card-foreground: 210 40% 98%;

    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;

    --primary: 210 40% 98%;
    --primary-foreground: 222.2 47.4% 11.2%;

    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: 210 40% 98%;

    --muted: 217.2 32.6% 17.5%;
    --muted-foreground: 215 20.2% 65.1%;

    --accent: 217.2 32.6% 17.5%;
    --accent-foreground: 210 40% 98%;

    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 40% 98%;

    --border: 217.2 32.6% 17.5%;
    --input: 217.2 32.6% 17.5%;
    --ring: 212.7 26.8% 83.9%;
  }
}

@layer base {
  * {
    border-color: var(--border-hex) !important;
  }

  body {
    color: rgb(var(--foreground-rgb));
    background: var(--background-hex);
  }

  a {
    @apply text-black opacity-60;
    text-decoration: underline;
  }

  a:hover {
    @apply text-accent opacity-100;
  }

  h2 {
    @apply text-xl mb-1;
  }
}

@layer components {
  .caption {
    @apply tracking-wide text-sm;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 187, 187, 187;
    --background-hex: #212121;
    --border-hex: #a0a0a039;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply text-white;
  }

  a {
    @apply text-black;
  }

  .svg-banner {
    @apply fill-white;
  }
}

